fixing queries
Note: For some reason when i inspect my project from chrome and i use "responsive" and i try to shrink it, my projects seems not responsive at all and everything is a mess.

When i am out of the inspection and i shrink my project, everything looks perfect.
Also when i inspect it from my phone (i have iphone 11) everything is perfect.

When i try to inspect my project through Mozilla Firefox. the dev tools are superior. Also i dont face any issues in responsiveness as it should be.

--- a/index.css
+++ b/index.css
@@ -142,7 +142,7 @@ header {
   text-align: center;
   color: white;
   height: 700px;
-  padding: 70px 100px;
+  padding: 100px 100px;
 
   transition: background-color 300ms ease-in-out;
 }
@@ -455,7 +455,7 @@ footer {
 
 @media (max-width: 1280px) {
   .container-box {
-    max-width: 1024px;
+    max-width: 2000px;
   }
   .gallery-image-responsive:hover {
     transform: none;
@@ -463,7 +463,7 @@ footer {
 }
 @media (max-width: 1024px) {
   .container-box {
-    max-width: 768px;
+    max-width: 1000px;
   }
   .header-title {
     font-size: 40px;
